# pybot-lostark

./: .gitignore  LICENSE  README.md  __main__.py  main.py  pyproject.toml
.app/: __main__.py  app.py
.app/config/: __init__.py
.app/template_matching/: template_matching.py
.bin/: notebook.ipynb
core/: calc_fps.py  detections.py  get_hwnd.py  move_mouse.py  position.py  repair_tool.py  test.py  vision.py  window_capture.py
draft/core/: vision.py
draft/modules/: auto_fishing.py
draft/tools/: return_window_names.py
fishing_bot/: config.py  fishing_bot.py  main.py  run_bot.py  windowcapture.py
modules/: auto_fishing.py  main.py
pybot_lostark/fishing_bot/: __main__.py  bot_actions.py  config.json  config.py  fishing_bot.py  match_template.py  repair_tool.py  run_bot.py
pybot_lostark/peripheral/: key_mapping.py
pybot_lostark/window_capture/: get_hwnd.py  vision.py
testing/: auto_fishing.py  bot_actions.py  test copy.py  test.py
window_capture/: vision.py
